# informatica-dbt-migration

./: .gitignore  mock_sources.sql  mock_sources_v2.sql  mock_sources_v3.sql  pyproject.toml  source_map.json  table_columns.json
docs/: CLI_Reference.md  Consolidated_Guide.md  Framework_Implementation_Plan.md  Production_Runbook.md  Technical_Design_Document.md
docs/diagrams/: 01_high_level_architecture.html  02_data_flow_diagram.html  03_migration_process_flow.html  04_snowflake_deployment_architecture.html  05_before_after_comparison.html  06_framework_pipeline.html
informatica_to_dbt/: __init__.py  cli.py  config.py  exceptions.py  metrics.py  notebook_entry.py  orchestrator.py  progress.py  utils.py
informatica_to_dbt/analyzer/: __init__.py  complexity.py  multi_workflow.py  transformation_registry.py
informatica_to_dbt/cache/: __init__.py  conversion_cache.py
informatica_to_dbt/chunker/: __init__.py  context_preserving.py
informatica_to_dbt/deployment/: __init__.py  deployer.py
informatica_to_dbt/discovery/: __init__.py  schema_discovery.py  xml_inventory.py
informatica_to_dbt/generator/: __init__.py  dbt_project_generator.py  llm_client.py  post_processor.py  prompt_builder.py  (+2 more)
input/: wf_BL_FF_ZJ_JOURNALS.XML  wf_BL_FF_ZJ_JOURNALS_STG.XML  wf_CM_Z1_DAILY_SALES_FEED.XML  wf_FF_AT_Z1_GL_ACCOUNT.XML  wf_FF_AT_ZJ_GL_ACCOUNT.XML
test_input/: s_m_INCR_DM_DIM_EQUIPMENT.XML  wf_AM_DI_CUSTOMER.XML  wf_AP_FF_CITIBANK_VCA.XML  wf_DI_ITEM_MTRL_MASTER.XML
test_output/: dbt_project.yml
test_output_4xml/: .user.yml  dbt_project.yml
tests/: conftest.py
(+80 files in other folders)
